--- a/package.json
+++ b/package.json
@@ -1,35 +1,1 @@
-{
-"type": "module",
-
-  "name": "parcel-project-template",
-  "version": "2.0.0",
-  "description": "",
-  "homepage": "https://NaTaLiaMoSKV.github.io/filmoteka",
-  "scripts": {
-    "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /filmoteka/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
-  },
-  "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
-  },
-  "dependencies": {
-    "axios": "^1.2.4",
-    "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6"
-  },
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.6.0",
-    "buffer": "^6.0.3",
-    "parcel": "^2.6.0",
-    "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
-  },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
-}
+{"type":"module","name":"parcel-project-template","version":"2.0.0","description":"","homepage":"https://NaTaLiaMoSKV.github.io/filmoteka","scripts":{"start":"parcel src/*.html","build":"parcel build src/*.html --public-url /filmoteka/"},"repository":{"type":"git","url":"git+https://github.com/goitacademy/parcel-project-template.git"},"keywords":[],"author":"Alexander Repeta <alexander.repeta@gmail.com>","license":"ISC","bugs":{"url":"https://github.com/goitacademy/parcel-project-template/issues"},"dependencies":{"axios":"^1.2.4","modern-normalize":"^1.1.0","notiflix":"^3.2.6"},"devDependencies":{"@parcel/transformer-sass":"^2.6.0","buffer":"^6.0.3","parcel":"^2.6.0","parcel-reporter-clean-dist":"^1.0.4","posthtml-include":"^1.7.4","sass":"^1.57.1"},"browserslist":"> 0.5%, last 2 versions, not dead"}
